<resources>
    <string name="app_name">VolksFitness</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_underline"><u>Do not have an account? Register</u></string>
    <string name="login_underline"><u>Already have an account? Login</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="username">User name</string>
    <string name="account_setting">Account Settings</string>
    <string name="new_message">New Messages</string>
    <string name="logout">Log out</string>
    <string name="Calories">Calories</string>

    <string name="weather_api_key">23a4c44d5c8a241857d91d4cdcad3269</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibGlxdWlkc2F5dWtpIiwiYSI6ImNsMWRjaGZxNjA3Y20zY3BtZjNyOG4xY20ifQ.hwghlX6iUmoMjQs7m5-1cg</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>

    <string-array name="weight">
        <item>kgs</item>
        <item>lbs</item>
    </string-array>

    <string-array name="height">
        <item>cms</item>
        <item>ins</item>
    </string-array>
</resources>