<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/account_setting"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/account_setting" />
        <item
            android:id="@+id/item2"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/new_message" />
    </group>

    <group>
        <item
            android:id="@+id/nav_home_fragment"
            android:title="Homepage"/>

        <item
            android:id="@+id/nav_food_intake_fragment"
            android:title="Food Intake"/>

        <item
            android:id="@+id/nav_calendar_fragment"
            android:title="Calendar"/>

        <item
            android:id="@+id/nav_report_fragment"
            android:title="Training Report"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_outline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>