<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/loading_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:orientation="vertical"
        android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/register"
                android:textColor="@color/light_black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.Material3.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_username"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.Material3.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.Material3.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_repeat_password"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_register"
            style="@style/Widget.Material3.Button"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/blue_button"
            android:elevation="10dp"
            android:text="@string/register"
            app:strokeColor="@color/light_black"
            app:strokeWidth="1px" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_underline"
            android:layout_gravity="center"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>